fix swagger + authentication + front